kubernetes/apps/applications/homer/deployment.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: homer
spec:
  replicas: 1
  revisionHistoryLimit: 0
  template:
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: homer
          image: b4bz/homer:v23.10.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 300
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /www/assets/config.yml
              subPath: config.yml
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            name: homer-config
