kubernetes/apps/applications/homer/ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: homer
spec:
  rules:
    - host: home.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer
                port:
                  name: http
